--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_URL_GRAPHQL_WP_PROD=https://backend.parador-hotels.com/graphql
 NEXT_PUBLIC_KEY_API_WP=sVrQ ZuVr Bvj9 y2yd a66J PqGF
 NEXT_PUBLIC_URL_HOTEL_ENGINE=https://be.synxis.com
 NEXT_PUBLIC_URL_PROD=https://parador-hotels.com/
-NEXT_PUBLIC_URL_API_NEXT_PROD=https://parador.vercel.app/api
+NEXT_PUBLIC_URL_API_NEXT_PROD=https://parador-test.vercel.app/api
 
 NEXT_PUBLIC_URL_DEV=http://localhost:3000/
 NEXT_PUBLIC_URL_API_NEXT_DEV=http://localhost:3000/api
