ubah lebih lengkap di special offer

--- a/.env
+++ b/.env
@@ -49,10 +49,10 @@ NEXT_PUBLIC_CAPTCHA_SITE_KEY=6LffTCkgAAAAAOh8Ko1Zx6016qXUseJu2gwQECFl
 CAPTCHA_SECRET_KEY=6LffTCkgAAAAANI1Nur-9AYUpWA_0LvrhvC5d8A7
 
 MAIL_API_KEY=halo
-MAIL_SENDER_ACCOUNT=parador-sender@bigkuma.com
-MAIL_SENDER_PASSWORD=#ys}ON,j)MQs@
-MAIL_HOST=smtp.bigkuma.com
-MAIL_PARADOR_LOGO_URL=http://prdr.bigkuma.com/wp-content/uploads/2022/07/Parador_White_Blue-01-2.jpg
+MAIL_SENDER_ACCOUNT=no-reply@parador-hotels.com
+MAIL_SENDER_PASSWORD=lwreklecvvcbpkxh
+MAIL_HOST=smtp.gmail.com
+MAIL_PARADOR_LOGO_URL=https://backend.parador-hotels.com/wp-content/uploads/2023/05/PHR-Logo-Parador-White-and-Blue.webp
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-YFQ28XP2X3
 NEXT_PUBLIC_GOOGLE_ANALYTICS_PROD=GTM-NHK5J3G
