--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_URL_API_WP_PROD=https://backend.parador-hotels.com/wp-json/jet-cct
-NEXT_PUBLIC_URL_WP_MEDIA=https://backend.parador-hotels.com/wp-json/wp/v2/media
-NEXT_PUBLIC_URL_GRAPHQL_WP_PROD=https://backend.parador-hotels.com/graphql
+NEXT_PUBLIC_URL_API_WP_PROD=https://sback.parador-hotels.com/wp-json/jet-cct
+NEXT_PUBLIC_URL_WP_MEDIA=https://sback.parador-hotels.com/wp-json/wp/v2/media
+NEXT_PUBLIC_URL_GRAPHQL_WP_PROD=https://sback.parador-hotels.com/graphql
 NEXT_PUBLIC_KEY_API_WP=sVrQ ZuVr Bvj9 y2yd a66J PqGF
 NEXT_PUBLIC_URL_HOTEL_ENGINE=https://be.synxis.com
 NEXT_PUBLIC_URL_PROD=https://parador-hotels.com/
@@ -8,10 +8,10 @@ NEXT_PUBLIC_URL_API_NEXT_PROD=https://parador-test.vercel.app/api
 
 NEXT_PUBLIC_URL_DEV=http://localhost:3000/
 NEXT_PUBLIC_URL_API_NEXT_DEV=http://localhost:3000/api
-NEXT_PUBLIC_URL_API_WP_DEV=https://backend.parador-hotels.com/wp-json/jet-cct
-NEXT_PUBLIC_URL_GRAPHQL_WP_DEV=https://backend.parador-hotels.com/graphql
+NEXT_PUBLIC_URL_API_WP_DEV=https://sback.parador-hotels.com/wp-json/jet-cct
+NEXT_PUBLIC_URL_GRAPHQL_WP_DEV=https://sback.parador-hotels.com/graphql
 
-WOOCOMMERCE_URL=https://backend.parador-hotels.com/
+WOOCOMMERCE_URL=https://sback.parador-hotels.com/
 WOOCOMMERCE_CONSUMER_KEY=ck_05dc08667093909025752283ef393e521ee1316c
 WOOCOMMERCE_CONSUMER_SECRET=cs_c9c6ac998f4575ddd3ad73f9cedb5dd975459d3a
 
@@ -52,7 +52,7 @@ MAIL_API_KEY=halo
 MAIL_SENDER_ACCOUNT=no-reply@parador-hotels.com
 MAIL_SENDER_PASSWORD=lwreklecvvcbpkxh
 MAIL_HOST=smtp.gmail.com
-MAIL_PARADOR_LOGO_URL=https://backend.parador-hotels.com/wp-content/uploads/2023/05/PHR-Logo-Parador-White-and-Blue.webp
+MAIL_PARADOR_LOGO_URL=https://sback.parador-hotels.com/wp-content/uploads/2023/05/PHR-Logo-Parador-White-and-Blue.webp
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-YFQ28XP2X3
 NEXT_PUBLIC_GOOGLE_ANALYTICS_PROD=GTM-NHK5J3G
